# chatneo

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 功能建议.md  错误报告.md
.github/workflows/: release.yml
docs/: backup.md  export.md  getting-started.md  knowledge-base.md  mcp.md  media-generation.md  model-params.md  voice.md
docs/.vitepress/: config.ts
public/: CHANGELOG.md
scripts/: bump.sh  generate-model-catalog.ts  release-publish.sh  release.sh
src/: App.tsx  index.css  main.tsx  settings.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: deep_link.rs  error_code.rs  export_pdf.rs  fonts.rs  knowledge.rs  lib.rs  logging.rs  main.rs  model_common.rs  progress_dialog.rs  settings.rs  text_extract.rs  tools.rs  tray.rs  updater.rs  webdav.rs
src-tauri/src/stt/: mod.rs  model_download.rs  openai.rs  whisper.rs
src-tauri/src/tts/: mod.rs  model_download.rs  openai.rs  sherpa.rs
src/assets/: model-catalog.json
src/components/: AppLayout.tsx  ErrorBoundary.tsx  ProviderIcon.tsx
src/components/Chat/: EmptyState.tsx  SummaryCard.tsx
src/components/ChatMessage/: AssistantMessage.tsx  CitationPanel.tsx  ComparisonMessage.tsx  ErrorMessage.tsx  Favicon.tsx  GeneratedImage.tsx  InlineCitation.tsx  LoadingMessage.tsx  MessageActions.tsx  SearchCitations.tsx  ThinkingBlock.tsx  ToolCallBlock.tsx  UserMessage.tsx  index.tsx  search-utils.ts  types.ts  useMessageMenu.ts
src/hooks/: useAttachmentMenu.ts  useChatActions.ts  useContextMenu.ts  useDropDirection.ts  useMcpServers.ts  useModels.ts  usePlugins.ts  usePrompts.ts  useProviderIconMap.ts  useProviderMenu.ts  useProviders.ts  useSettings.ts  useShortcuts.ts  useTauriEvent.ts  useTools.ts  useVoiceInput.ts  useVoiceOutput.ts
src/lib/: apply-settings.ts  attachment-query.ts  attachments.ts  backup.ts  chat-media.ts  chat-orchestrator.ts  chat-params.ts  chat-persistence.ts  chat.ts  chunking.ts  db.ts  embedding.ts  instruction.ts  knowledge-base.ts  logger.ts  mcp-db.ts  mcp-manager.ts  mcp-stdio-transport.ts  media-generation.ts  message-parts.ts  model-capabilities.ts  model-catalog.ts  plugin-registry.ts  plugin-runtime.ts  proxy-fetch.ts  restore.ts  search-utils.ts  shortcuts.ts  streamdown-plugins.ts  tool-call-types.ts  tool-registry.ts  utils.ts  webdav-scheduler.ts  webdav.ts
src/locales/: en.json  index.ts  zh.json
src/pages/: Home.tsx  Settings.tsx
src/plugins/: index.ts
src/store/: boot.ts  model.ts
src/styles/: streamdown.css
src/tools/: calculator.tsx  code-runner.tsx  current-time.tsx  file-reader.tsx  index.ts  translator.tsx  url-reader.tsx  weather.tsx  web-search.tsx
src/utils/: download.ts  export-conversation.ts  export-docx.ts  latex.ts  screenshot.ts  security.ts
(+199 files in other folders)
